--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+   "engines":{
+      "node":"22.14.0"
+    },
   "name": "airbnb-project",
   "version": "1.0.0",
   "description": "",
@@ -12,9 +15,9 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.16.0"
   }
 }
